--- a/demographic-web-api/pom.xml
+++ b/demographic-web-api/pom.xml
@@ -14,7 +14,6 @@
 	<name>demographic-web-api</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
-		<java.version>17</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -70,8 +69,7 @@
 				<groupId> org.liquibase </groupId>
 				<artifactId>liquibase-maven-plugin</artifactId>
 				<configuration>
-					<propertyFile>src/main/resources/application.properties</propertyFile>
-					<propertyFileWillOverride>true</propertyFileWillOverride>
+					<propertyFile>liquibase.properties</propertyFile>
 				</configuration>
 			</plugin>
 		</plugins>
