--- a/demographic-web-api/src/main/resources/application.properties
+++ b/demographic-web-api/src/main/resources/application.properties
@@ -19,5 +19,5 @@ spring.jpa.properties.hibernate.connection.isolation=2
 spring.jpa.properties.hibernate.jdbc.batch_size=10
 
 
-spring.liquibase.change-log=classpath:/db/db.changelog-master.xml
+spring.liquibase.change-log=changelog-master.xml
 server.port: 9001
