--- a/demographic-web-api/pom.xml
+++ b/demographic-web-api/pom.xml
@@ -65,13 +65,13 @@
 					</excludes>
 				</configuration>
 			</plugin>
-			<plugin>
+			<!-- <plugin>
 				<groupId> org.liquibase </groupId>
 				<artifactId>liquibase-maven-plugin</artifactId>
 				<configuration>
 					<propertyFile>liquibase.properties</propertyFile>
 				</configuration>
-			</plugin>
+			</plugin> -->
 		</plugins>
 	</build>
 
