--- a/demographic-web-api/src/main/resources/application.properties
+++ b/demographic-web-api/src/main/resources/application.properties
@@ -18,6 +18,6 @@ spring.jpa.properties.hibernate.connection.isolation=2
 # Performance
 spring.jpa.properties.hibernate.jdbc.batch_size=10
 
-
-spring.liquibase.change-log=changelog-master.xml
+spring.liquibase.enabled= false
+# spring.liquibase.change-log=/db/changelog-master.xml
 server.port: 9001
