--- a/demographic-web-api/src/main/resources/application.properties
+++ b/demographic-web-api/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 debug=false
 spring.jpa.hibernate.ddl-auto=update
 
-spring.datasource.url=jdbc:mysql://vmi676400.contaboserver.net:3306/demographic?autoReconnect=true&useSSL=false
+spring.datasource.url=jdbc:mysql://vmi676400.contaboserver.net:3306/demographic-web?autoReconnect=true&useSSL=false
 spring.datasource.username=db
 spring.datasource.password=.f@k)N4O!./bN)4/
 logging.level.root=WARN
@@ -21,3 +21,9 @@ spring.jpa.properties.hibernate.jdbc.batch_size=10
 spring.liquibase.enabled= false
 # spring.liquibase.change-log=/db/changelog-master.xml
 server.port: 9001
+
+# spring.main.banner-mode=log
+# logging.file.name=logs/test.log
+# logging.pattern.console=
+spring.servlet.multipart.max-file-size=50MB
+spring.servlet.multipart.max-request-size=50MB
