--- a/demographic-web-api/src/main/resources/liquibase.properties
+++ b/demographic-web-api/src/main/resources/liquibase.properties
@@ -1,4 +1,4 @@
-url =jdbc:mysql://vmi676400.contaboserver.net:3306/demographic?autoReconnect=true&useSSL=false 
+url =jdbc:mysql://vmi676400.contaboserver.net:3306/demographic-web?autoReconnect=true&useSSL=false 
 password =.f@k)N4O!./bN)4/
 username=db
 changeLogFile=/db/changelog-master.xml
