--- a/demographic-client/report-client-web/package.json
+++ b/demographic-client/report-client-web/package.json
@@ -50,7 +50,9 @@
     "bs-stepper": "1.7.0",
     "chart.js": "2.9.4",
     "core-js": "3.14.0",
+    "csv-parser": "^3.0.0",
     "feather-icons": "4.28.0",
+    "file-system": "^2.2.2",
     "flatpickr": "4.6.9",
     "hammerjs": "2.0.8",
     "katex": "0.13.11",
@@ -71,12 +73,16 @@
     "ngx-toastr": "14.0.0",
     "node-waves": "0.7.6",
     "nouislider": "15.1.1",
+    "path": "^0.12.7",
+    "path-browserify": "^1.0.1",
     "plyr": "3.6.8",
     "quill": "1.3.7",
+    "rxjs": "6.6.0",
+    "stream": "^0.0.2",
     "sweetalert2": "9.17.2",
     "swiper": "6.7.0",
-    "rxjs": "6.6.0",
     "tslib": "2.2.0",
+    "util": "^0.12.4",
     "zone.js": "0.11.4"
   },
   "devDependencies": {
@@ -87,8 +93,8 @@
     "@angularclass/hmr": "3.0.0",
     "@types/jasmine": "3.6.3",
     "@types/node": "12.11.1",
-    "jasmine-core": "3.7.0",
     "codelyzer": "6.0.1",
+    "jasmine-core": "3.7.0",
     "karma": "6.3.0",
     "karma-chrome-launcher": "3.1.0",
     "karma-coverage": "2.0.3",
