--- a/demographic-client/report-client-web/angular.json
+++ b/demographic-client/report-client-web/angular.json
@@ -52,7 +52,8 @@
             },
             "scripts": [
               "./node_modules/katex/dist/katex.min.js",
-              "./node_modules/quill/dist/quill.min.js"
+              "./node_modules/quill/dist/quill.min.js",
+              "./node_modules/apexcharts/dist/apexcharts.min.js"
             ],
             "vendorChunk": true,
             "extractLicenses": false,
