--- a/demographic-web-api/src/main/resources/application.properties
+++ b/demographic-web-api/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 debug=false
 spring.jpa.hibernate.ddl-auto=update
 
-spring.datasource.url=jdbc:mysql://vmi676400.contaboserver.net:3306/demographic-web?autoReconnect=true&useSSL=false
-spring.datasource.username=db
-spring.datasource.password=.f@k)N4O!./bN)4/
+spring.datasource.url=jdbc:mysql://185.205.244.215:3306/demographic-web?autoReconnect=true&useSSL=false
+spring.datasource.username=admin
+spring.datasource.password=MApz3zkE1Cla
 logging.level.root=WARN
  
 spring.jpa.properties.hibernate.generate_statistics=true
