--- a/demographic-web-api/src/main/resources/application.properties
+++ b/demographic-web-api/src/main/resources/application.properties
@@ -1,9 +1,7 @@
 debug=false
 spring.jpa.hibernate.ddl-auto=update
 
-spring.datasource.url=jdbc:mysql://185.205.244.215:3306/demographic-web?autoReconnect=true&useSSL=false
-spring.datasource.username=admin
-spring.datasource.password=MApz3zkE1Cla
+# for safety reasons have removed database credentials.Update with your own credentials
 logging.level.root=WARN
  
 spring.jpa.properties.hibernate.generate_statistics=true
